added info to vedism

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <hr>
       <h1> Encyclopedia </h1>
-      <list><a href="info/vedism.html">Vedism</a> - Introduction to Vedism</list><br>
+      <list><a href="info/vedism.html">Vedism </a> - Introduction to Vedism, Ārya-Dasyu conflict, differences to Hinduism</list><br>
       <list><a href="info/dictionary.html">Dictionary</a> - Dictionary of sanskrit words within the Ṛgveda</list><br>
       <list><a href="info/deities.html">Deities</a> - List of deities within the Ṛgveda </list><br>
       <list><a href="info/mantras.html">Mantras</a> - Important Mantras </list><br>
