--- a/info/vedism.html
+++ b/info/vedism.html
@@ -12,12 +12,12 @@
 
   <!-- title -->
   <h1 class="heading">Vedism</h1>
-  <p class="subtitle">What is Vedism?</p>
+  <p class="subtitle">What is Vedism? Why is it different to Hinduism?</p>
   <hr>
 
   <!-- content -->
   <div>
-    <h2>Vedic Religion and the Aryans</h2>
+    <h2>Vedic Religion</h2>
     <p>The Vedic religion, one of the earliest known religious traditions, was central to the Aryan people, who settled in the Indian subcontinent around 1500 BCE. This ancient faith revolved around a complex pantheon of gods and a profound concern with maintaining cosmic order. Fundamental to the Vedic religion was the belief in ṛta, the cosmic principle of order and truth that governed the universe. Adherents of the Vedic tradition believed that performing precise rituals and sacrifices was essential to uphold ṛta and ensure the stability and prosperity of the world.</p>
     
     <p>Central to Vedic practice was the worship of various deities, each presiding over different aspects of the natural and cosmic realms. Among these deities was Indra, the formidable warrior god of thunderstorms, rain, and war, revered as the king of the gods. Indra’s victory over the demon Vṛtra, who had imprisoned the world’s waters, symbolized the triumph of order over chaos. Another key deity was Varuṇa, associated with the sky, the seas, and cosmic law (ṛta). Varuṇa played a crucial role in upholding moral order and maintaining cosmic balance. Mitra, often paired with Varuṇa, was a deity associated with the sun, friendship, and the upholding of truth and justice. He was considered a guardian of the moral and social order, working alongside Varuṇa to enforce cosmic and societal laws. Mitra's role extended to ensuring the integrity of promises and agreements, reinforcing the importance of trust and harmony in both divine and human realms.</p>
@@ -52,6 +52,20 @@
     
     <p>The Vedic religion also included beliefs about an afterlife, with concepts of heaven (Svarga) and hell (Naraka). Heaven was seen as a place of eternal bliss, where the righteous could enjoy the company of the gods, while hell was a temporary realm of punishment for those who violated moral and ritual laws. Unlike Hinduism, Vedism did not emphasize reincarnation or the ultimate liberation (mokṣa); instead, the focus was on living according to ṛta and securing a place in heaven through correct ritual practices.</p>
   </div>
+
+  <div>
+    <h2>Aryan-Dasyu Conflict</h2>
+    <p>
+      The Ṛgveda, one of the oldest sacred texts in the world, offers a vivid portrayal of the early Aryan people, who are believed to have migrated into the Indian subcontinent from the northwest. These Aryans, described as the noble people, were a warrior society with a deep devotion to their Gods, particularly Indra, the mighty god of war, thunder, and rain. Indra, the most celebrated deity in the Ṛgveda, is depicted as a champion of the Aryans, leading them into battle and ensuring their victory over their enemies. The enemies of the Aryans are frequently identified as the Dasyu, a term used in the Ṛgveda to describe a group of people who were culturally and religiously distinct from the Aryans. The Dasyus were often depicted as dark-skinned, ignoble, destructive and did not follow vedic religion or traditions. In the Vedic hymns, they are portrayed as hostile to the Aryans and their rituals, living in fortified settlements and resisting the spread of Aryan influence.
+    </p>
+    <p>
+      The conflict between the Aryans and the Dasyus is a central theme in many of the Ṛgvedic hymns. It is portrayed as a cosmic battle between the forces of ṛta which is order represented by the Aryans and anṛta, which is chaos embodied by the Dasyus. The Aryans, are described as waging war against the Dasyus, destroying their fortresses, and establishing their own religious practices and social order. These wars were not just physical conflicts but were also seen as spiritual conquests, with the Aryans bringing the light of their Gods and their dharma (moral order) to a land they perceived as dominated by the barbarity of the Dasyu. The Ṛgveda presents these conflicts in grand, mythic terms, with Indra shattering the fortresses of the Dasyus with his vajra, a symbol of divine power and justice. The victory of the Aryans over the Dasyus is portrayed as inevitable and divinely sanctioned, reflecting the belief in the superiority of the Aryan way of life and their devas. The Dasyu, on the other hand, are often portrayed negatively in the hymns, insulted for not speaking sanskrit, having black skin and being "anindrā" (without Indra).
+    </p>
+    <p>
+      As Vedic society transitioned from its fervent devotion to the Aryan gods, towards a more agnostic and pluralistic spiritual landscape, the once-demonized Dasyu began to exert a profound influence on the evolving religious fabric of the Indian subcontinent. The rise of Buddhism, with its emphasis on a non-theistic path and its challenge to ritualistic orthodoxy, paved the way for a broader acceptance of diverse deities and spiritual practices. This shift facilitated the gradual assimilation of Dasyu deities and their traditions into the religious mainstream, culminating in the formation of Hinduism—a religion that embraced a multitude of gods and practices once deemed heretical by the Vedic establishment. Consequently, the Aryan gods, including the mighty Indra, faded from prominence, supplanted by deities who were once considered adversarial. Prominent among these were the Dravidian gods, such as Shiva and Krishna, with Krishna's very name reflecting his dark complexion. This transformation is underscored by the intermingling of Aryan and Dasyu bloodlines over centuries, leading to the complex genetic and cultural heritage of modern Indians. The Aryans upheld strict gotra regulations to ensure purity of lineage and that they only stayed within their tribes, eventually intermingled with the Dasyu and Dravidian populations after Vedic society fell leading to the formation of modern Indians and consequently many Indians trace their heritage to both Dasyu and Dravidian ancestors, but it is primarily individuals and groups of upper castes of northern India, Pakistan, Bangladesh, Nepal, and Afghanistan who are able to trace their lineage more directly back to the Aryans.
+    </p>
+  </div>
+  
 
 </body>
 </html>
