--- a/info/dictionary.html
+++ b/info/dictionary.html
@@ -26,6 +26,7 @@
     <li><strong>Karma:</strong> Action, deed, or the principle of cause and effect</li>
     <li><strong>Satya:</strong> Truth</li>
     <li><strong>Tapas:</strong> Austerity, spiritual practice</li>
+    <li><strong>Mantra:</strong> Sacred utterances or sounds, integral to Vedic rituals.</li>
     <li><strong>Deva:</strong> Deity or god</li>
     <li><strong>Asura:</strong> Demon or anti-god</li>
     <li><strong>Māyā:</strong> Illusion or magic</li>
